tests/v0_5/invalid/nested_step_cycle_direct.devops
// INVALID: circular step dependency (A -> B -> A)

target "server" {
  address = "10.0.0.1:7700"
}

step "step_a" {
  type = step_b
  src = "./a"
}

step "step_b" {
  type = step_a
  dest = "/b"
}

node "deploy" {
  type = step_a
  targets = [server]
}
